<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/x281"
    android:background="@drawable/question_reward_coin_bg_color"
    android:paddingBottom="@dimen/x12"
    android:layout_gravity="bottom"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/question_reward_coin_bg"
        />

    <LinearLayout
        android:id="@+id/ll_reward_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/x12"
        android:paddingTop="@dimen/x18"
        >
    <include layout="@layout/show_question_reward_coin"
        />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_modify_number_coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_reward_num"
        android:text="@string/modify_number_coins"
        android:textSize="@dimen/x12"
        android:textColor="@color/color_e8e8e8"
        android:layout_marginStart="@dimen/x27"
        android:layout_marginTop="@dimen/x14"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x8"
        android:layout_marginHorizontal="@dimen/x27"
        android:layout_below="@id/tv_modify_number_coins"
        >

        <Button
            android:id="@+id/btn_reward_one_hundred"
            android:layout_width="@dimen/x120"
            android:layout_height="@dimen/x32"
            android:background="@drawable/select_question_reward_coin_bg"
            android:textColor="@color/color_f7f7f7"
            android:textSize="@dimen/x12"
            android:text="@string/one_hundred"
            android:gravity="center"
            />
        <Button
            android:id="@+id/btn_reward_fifty"
            android:layout_width="@dimen/x120"
            android:layout_height="@dimen/x32"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/btn_reward_one_hundred"
            android:background="@color/color_121a29"
            android:text="@string/fifty"
            android:textColor="@color/color_e8d587"
            />
        <Button
            android:id="@+id/btn_reward_thirty"
            android:layout_width="@dimen/x120"
            android:layout_height="@dimen/x32"
            android:text="@string/thirty"
            android:background="@color/color_121a29"
            android:textColor="@color/color_e8d587"
            android:layout_below="@id/btn_reward_one_hundred"
            android:layout_marginTop="@dimen/x13"
            />

        <Button
            android:id="@+id/btn_reward_ten"
            android:layout_width="@dimen/x120"
            android:layout_height="@dimen/x32"
            android:text="@string/ten"
            android:background="@color/color_121a29"
            android:textColor="@color/color_e8d587"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btn_reward_fifty"
            android:layout_marginTop="@dimen/x13"
            />

        <Button
            android:id="@+id/btn_reward_customize"
            android:layout_width="@dimen/x120"
            android:layout_height="@dimen/x32"
            android:text="@string/customize_num"
            android:background="@color/color_121a29"
            android:textColor="@color/color_e8e8e8"
            android:layout_below="@id/btn_reward_thirty"
            android:layout_marginTop="@dimen/x13"
            />

    </RelativeLayout>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/x119"
        android:layout_height="@dimen/x29"
        android:background="@drawable/blue_main_button"
        android:layout_marginStart="@dimen/x26"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/x10"
        android:textColor="@color/color_e8e8e8"
        android:text="@string/pickerview_cancel"
        android:gravity="center"
        />
    <Button
        android:id="@+id/btn_determine"
        android:layout_width="@dimen/x119"
        android:layout_height="@dimen/x29"
        android:background="@drawable/lose_interest_btn"
        android:layout_toRightOf="@id/btn_cancel"
        android:layout_marginStart="@dimen/x31"
        android:layout_alignParentBottom="true"
        android:text="@string/pickerview_submit"
        android:textSize="@dimen/x10"
        android:textColor="@color/color_e8e8e8"
        android:gravity="center"
        />

</RelativeLayout>